--- a/index.html
+++ b/index.html
@@ -1555,10 +1555,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																class="elementor-widget-wrap elementor-element-populated">
 																<div class="elementor-element elementor-element-cb6c72d elementor-widget elementor-widget-video"
 																	data-id="cb6c72d" data-element_type="widget"
-																	data-settings="{" youtube_url":"https:\="" \=""
-																	www.youtube.com\=""
-																	watch?v="QiTpXaGfxNE&quot;,&quot;autoplay&quot;:&quot;yes&quot;,&quot;play_on_mobile&quot;:&quot;yes&quot;,&quot;mute&quot;:&quot;yes&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;yt_privacy&quot;:&quot;yes&quot;,&quot;video_type&quot;:&quot;youtube&quot;}&quot;"
-																	data-widget_type="video.default">
+																	data-settings='{
+																		"youtube_url": "https://www.youtube.com/watch?v=QiTpXaGfxNE",
+																		"autoplay": "yes",
+																		"play_on_mobile": "yes",
+																		"mute": "yes",
+																		"loop": "yes",
+																		"yt_privacy": "yes",
+																		"video_type": "youtube"
+																	}' data-widget_type="video.default">
 																	<div class="elementor-widget-container">
 																		<style>
 																			/*! elementor - v3.18.0 - 20-12-2023 */
@@ -1669,10 +1674,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																class="elementor-widget-wrap elementor-element-populated">
 																<div class="elementor-element elementor-element-366d676 elementor-widget elementor-widget-video"
 																	data-id="366d676" data-element_type="widget"
-																	data-settings="{" youtube_url":"https:\="" \=""
-																	www.youtube.com\=""
-																	watch?v="3q7w-lRtW78&quot;,&quot;autoplay&quot;:&quot;yes&quot;,&quot;play_on_mobile&quot;:&quot;yes&quot;,&quot;mute&quot;:&quot;yes&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;yt_privacy&quot;:&quot;yes&quot;,&quot;video_type&quot;:&quot;youtube&quot;}&quot;"
-																	data-widget_type="video.default">
+																	data-settings='{
+																		"youtube_url": "https://www.youtube.com/watch?v=3q7w-lRtW78",
+																		"autoplay": "yes",
+																		"play_on_mobile": "yes",
+																		"mute": "yes",
+																		"loop": "yes",
+																		"yt_privacy": "yes",
+																		"video_type": "youtube"
+																	}' data-widget_type="video.default">
 																	<div class="elementor-widget-container">
 																		<div
 																			class="elementor-wrapper elementor-open-inline">
