--- a/index.html
+++ b/index.html
@@ -2824,7 +2824,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="elementor-element elementor-element-545c06e elementor-widget elementor-widget-image"
 										data-id="545c06e" data-element_type="widget" data-widget_type="image.default">
 										<div class="elementor-widget-container">
-											<img width="250" height="250" src="/images/BOB-LOGO.png"
+											<img width="250" height="250" src="./images/BOB-LOGO.png"
 												class="attachment-full size-full wp-image-418"
 												alt="Bhola Online Book Logo">
 										</div>
@@ -3497,7 +3497,7 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
 				</a></li>
 		</ul>
 	</div>
-	<div class="gtranslate_wrapper" id="gt-wrapper-44884148"></div>
+	<!-- <div class="gtranslate_wrapper" id="gt-wrapper-44884148"></div> -->
 	<link rel="stylesheet" id="pa-prettyphoto-css" href="css/prettyphoto.min.css" media="all">
 	<link data-minify="1" rel="stylesheet" id="font-awesome-5-all-css" href="css/all.min.css" media="all">
 	<link data-minify="1" rel="stylesheet" id="ep-step-flow-css" href="css/ep-step-flow.css" media="all">
