--- a/index.html
+++ b/index.html
@@ -1320,8 +1320,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					height="250"
 																					src="./images/BOB-LOGO.png"
 																					class="attachment-medium size-medium wp-image-418"
-																					alt="Bhola Online Book Logo"
-																					>
+																					alt="Bhola Online Book Logo">
 																			</figure>
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
@@ -1360,13 +1359,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-image-box-wrapper">
 																			<figure class="elementor-image-box-img"><img
-																				decoding="async" width="250"
-																				height="250"
-																				src="./images/BOB-LOGO.png"
-																				class="attachment-medium size-medium wp-image-418"
-																				alt="Bhola Online Book Logo"
-																				>
-																		</figure>
+																					decoding="async" width="250"
+																					height="250"
+																					src="./images/BOB-LOGO.png"
+																					class="attachment-medium size-medium wp-image-418"
+																					alt="Bhola Online Book Logo">
+																			</figure>
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
 																					ESCOBAR777 ♛ </h3>
@@ -1404,13 +1402,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-image-box-wrapper">
 																			<figure class="elementor-image-box-img"><img
-																				decoding="async" width="250"
-																				height="250"
-																				src="./images/BOB-LOGO.png"
-																				class="attachment-medium size-medium wp-image-418"
-																				alt="Bhola Online Book Logo"
-																				>
-																		</figure>
+																					decoding="async" width="250"
+																					height="250"
+																					src="./images/BOB-LOGO.png"
+																					class="attachment-medium size-medium wp-image-418"
+																					alt="Bhola Online Book Logo">
+																			</figure>
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
 																					CRICKETHALLA ♛</h3>
@@ -1453,13 +1450,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-image-box-wrapper">
 																			<figure class="elementor-image-box-img"><img
-																				decoding="async" width="250"
-																				height="250"
-																				src="./images/BOB-LOGO.png"
-																				class="attachment-medium size-medium wp-image-418"
-																				alt="Bhola Online Book Logo"
-																				>
-																		</figure>
+																					decoding="async" width="250"
+																					height="250"
+																					src="./images/BOB-LOGO.png"
+																					class="attachment-medium size-medium wp-image-418"
+																					alt="Bhola Online Book Logo">
+																			</figure>
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
 																					247LORDS ♛ </h3>
@@ -3274,8 +3270,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 												</span>
 												<span class="elementor-grid-item">
 													<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-a85d154"
-														href="https://wa.me/+917773051049"
-														target="_blank">
+														href="https://wa.me/+917773051049" target="_blank">
 														<span class="elementor-screen-only">Instagram</span>
 														<i class="fab fa-instagram"></i> </a>
 												</span>
@@ -3287,8 +3282,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 												</span>
 												<span class="elementor-grid-item">
 													<a class="elementor-icon elementor-social-icon elementor-social-icon-pinterest elementor-repeater-item-3809603"
-														href="https://wa.me/+917773051049"
-														target="_blank">
+														href="https://wa.me/+917773051049" target="_blank">
 														<span class="elementor-screen-only">Pinterest</span>
 														<i class="fab fa-pinterest"></i> </a>
 												</span>
@@ -3372,7 +3366,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<nav class="uicore elementor-container">
 				<div class="uicore-branding uicore-mobile">
 					<!-- <a href="https://bholaonlinebook.in/" rel="home"> -->
-						<!-- <img width="250" height="250" class="uicore uicore-logo"
+					<!-- <img width="250" height="250" class="uicore uicore-logo"
 							src="./images/BOB-LOGO.png"
 							alt="Bhola Online Book"
 							> -->
@@ -3429,7 +3423,7 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
  console.log( 'Using Convertio v.3.0.5');
  console.log( 'Powered By UiCore Framework v.5.0.5');
  </script>
-	<div class="floating-menu float-menu-1">
+	<div class="floating-menu float-menu-1" id="floating-style">
 		<ul class="fm-bar">
 			<li class="fm-item-1-0"><a href="https://wa.me/+917773051049" target="_blank">
 					<div class="fm-icon"><i class="fab fa-facebook-f"></i></div>
@@ -3437,8 +3431,7 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
 						<div class="fm-text"> Facebook</div>
 					</div>
 				</a></li>
-			<li class="fm-item-1-1"><a href="https://wa.me/+917773051049"
-					target="_blank">
+			<li class="fm-item-1-1"><a href="https://wa.me/+917773051049" target="_blank">
 					<div class="fm-icon"><i class="fab fa-instagram"></i></div>
 					<div class="fm-label">
 						<div class="fm-text"> Instagram</div>
@@ -3458,6 +3451,23 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
 				</a></li>
 		</ul>
 	</div>
+
+//New Css Style for floting icon
+
+	<style>
+
+		
+
+		@media (max-width: 1026px) {
+			#floating-style {
+				display: none;
+			}
+		}
+
+	</style>
+
+
+
 	<!-- <div class="gtranslate_wrapper" id="gt-wrapper-44884148"></div> -->
 	<link rel="stylesheet" id="pa-prettyphoto-css" href="css/prettyphoto.min.css" media="all">
 	<link data-minify="1" rel="stylesheet" id="font-awesome-5-all-css" href="css/all.min.css" media="all">
