floating menu done-1

--- a/index.html
+++ b/index.html
@@ -3485,6 +3485,12 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
 			--fm-z-index: 9999;
 		}
 
+		@media (max-width: 1026px) {
+			.floating-menu {
+				--fm-icon-size: 15px;
+			}
+		}
+
 		.fm-item-1-0 {
 			--fm-color: #ffffff;
 			--fm-background: rgb(221, 51, 51);
