--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-button-wrapper">
 																			<a class="elementor-button elementor-button-link elementor-size-lg"
-																				href="https://Escobar247.com/"
+																				href="https://wa.me/+917773051049"
 																				target="_blank">
 																				<span
 																					class="elementor-button-content-wrapper">
@@ -1378,7 +1378,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-button-wrapper">
 																			<a class="elementor-button elementor-button-link elementor-size-lg"
-																				href="https://Escobar777.com"
+																				href="https://wa.me/+917773051049"
 																				target="_blank">
 																				<span
 																					class="elementor-button-content-wrapper">
@@ -1426,7 +1426,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-button-wrapper">
 																			<a class="elementor-button elementor-button-link elementor-size-lg"
-																				href="http://cricketthalla.com/home"
+																				href="https://wa.me/+917773051049"
 																				target="_blank">
 																				<span
 																					class="elementor-button-content-wrapper">
@@ -1475,7 +1475,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																	<div class="elementor-widget-container">
 																		<div class="elementor-button-wrapper">
 																			<a class="elementor-button elementor-button-link elementor-size-lg"
-																				href="http://247lords.com"
+																				href="https://wa.me/+917773051049"
 																				target="_blank">
 																				<span
 																					class="elementor-button-content-wrapper">
