id button fixed

--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					class="elementor-button-content-wrapper">
 																					<span
 																						class="elementor-button-text">Get
-																						Demo ID</span>
+																						 ID</span>
 																				</span>
 																			</a>
 																		</div>
@@ -1384,7 +1384,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					class="elementor-button-content-wrapper">
 																					<span
 																						class="elementor-button-text">Get
-																						Demo ID</span>
+																						 ID</span>
 																				</span>
 																			</a>
 																		</div>
@@ -1411,11 +1411,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
 																					CRICKETHALLA ♛</h3>
-																				<p
-																					class="elementor-image-box-description">
-																					Userid: <strong>Demo77</strong><br>
-																					Password: <strong>Ga@12345</strong>
-																				</p>
+																				
 																			</div>
 																		</div>
 																	</div>
@@ -1432,7 +1428,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					class="elementor-button-content-wrapper">
 																					<span
 																						class="elementor-button-text">Get
-																						Demo ID</span>
+																						 ID</span>
 																				</span>
 																			</a>
 																		</div>
@@ -1459,12 +1455,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<div class="elementor-image-box-content">
 																				<h3 class="elementor-image-box-title">♛
 																					247LORDS ♛ </h3>
-																				<p
-																					class="elementor-image-box-description">
-																					Userid:
-																					<strong>Demo12345</strong><br>
-																					Password: <strong>Ga@12345</strong>
-																				</p>
+																			
 																			</div>
 																		</div>
 																	</div>
@@ -1481,7 +1472,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					class="elementor-button-content-wrapper">
 																					<span
 																						class="elementor-button-text">Get
-																						Demo ID</span>
+																						ID</span>
 																				</span>
 																			</a>
 																		</div>
@@ -3452,14 +3443,14 @@ var uicore_frontend = {'back':'Back', 'rtl' : '','mobile_br' : '1025'};
 		</ul>
 	</div>
 
-//New Css Style for floting icon
+	//New Css Style for floting icon
 
 	<style>
 
-		
-		
 
-	
+
+
+
 
 	</style>
 
