--- a/index.html
+++ b/index.html
@@ -1323,8 +1323,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					alt="Bhola Online Book Logo">
 																			</figure>
 																			<div class="elementor-image-box-content">
-																				<h3 class="elementor-image-box-title">♛
-																					ESCOBAR247 ♛</h3>
+																				<!-- <h3 class="elementor-image-box-title">♛
+																					ESCOBAR247 ♛</h3> -->
 																			</div>
 																		</div>
 																	</div>
@@ -1366,8 +1366,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					alt="Bhola Online Book Logo">
 																			</figure>
 																			<div class="elementor-image-box-content">
-																				<h3 class="elementor-image-box-title">♛
-																					ESCOBAR777 ♛ </h3>
+																				<!-- <h3 class="elementor-image-box-title">♛
+																					ESCOBAR777 ♛ </h3> -->
 																			</div>
 																		</div>
 																	</div>
@@ -1409,8 +1409,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					alt="Bhola Online Book Logo">
 																			</figure>
 																			<div class="elementor-image-box-content">
-																				<h3 class="elementor-image-box-title">♛
-																					CRICKETHALLA ♛</h3>
+																				<!-- <h3 class="elementor-image-box-title">♛
+																					CRICKETHALLA ♛</h3> -->
 																				
 																			</div>
 																		</div>
@@ -1453,8 +1453,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																					alt="Bhola Online Book Logo">
 																			</figure>
 																			<div class="elementor-image-box-content">
-																				<h3 class="elementor-image-box-title">♛
-																					247LORDS ♛ </h3>
+																				<!-- <h3 class="elementor-image-box-title">♛
+																					247LORDS ♛ </h3> -->
 																			
 																			</div>
 																		</div>
