--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<figure class="elementor-image-box-img"><img
 																					decoding="async" width="250"
 																					height="250"
-																					src="./images/BOB-LOGO.png"
+																					src="./images1/1.png"
 																					class="attachment-medium size-medium wp-image-418"
 																					alt="Bhola Online Book Logo">
 																			</figure>
@@ -1361,7 +1361,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<figure class="elementor-image-box-img"><img
 																					decoding="async" width="250"
 																					height="250"
-																					src="./images/BOB-LOGO.png"
+																					src="./images1/2.png"
 																					class="attachment-medium size-medium wp-image-418"
 																					alt="Bhola Online Book Logo">
 																			</figure>
@@ -1404,7 +1404,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<figure class="elementor-image-box-img"><img
 																					decoding="async" width="250"
 																					height="250"
-																					src="./images/BOB-LOGO.png"
+																					src="./images1/3.png"
 																					class="attachment-medium size-medium wp-image-418"
 																					alt="Bhola Online Book Logo">
 																			</figure>
@@ -1448,7 +1448,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																			<figure class="elementor-image-box-img"><img
 																					decoding="async" width="250"
 																					height="250"
-																					src="./images/BOB-LOGO.png"
+																					src="./images1/4.png"
 																					class="attachment-medium size-medium wp-image-418"
 																					alt="Bhola Online Book Logo">
 																			</figure>
